[project]
name = "druginteractions-kg"
version = "0.1.0"
description = "Drug interactions & pharmacogenomics knowledge graph built on Samyama — DrugBank, DGIdb, SIDER, ChEMBL, TTD, OpenFDA"
requires-python = ">=3.10"
dependencies = [
    "samyama>=0.6.0",
    "requests>=2.31",
    "rich>=13.0",
    "click>=8.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
include = ["etl*", "mcp_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
